@@ -24,8 +24,6 @@
 
 package com.bernardomg.mvc.springframework.response.model;
 
-import java.util.stream.Collectors;
-
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Sort.Order;
 
@@ -33,7 +31,9 @@ import com.bernardomg.mvc.response.model.ImmutablePropertySort;
 import com.bernardomg.mvc.response.model.PaginatedResponse;
 import com.bernardomg.mvc.response.model.PropertySort;
 
+import lombok.EqualsAndHashCode;
 import lombok.NonNull;
+import lombok.ToString;
 
 /**
  * Paginated response wrapping a Spring page.
@@ -43,6 +43,8 @@ import lombok.NonNull;
  * @param <T>
  *            response content type
  */
+@ToString
+@EqualsAndHashCode
 public final class ImmutableSpringPageResponse<T> implements PaginatedResponse<Iterable<T>> {
 
     /**
@@ -65,7 +67,7 @@ public final class ImmutableSpringPageResponse<T> implements PaginatedResponse<I
         sort = pg.getSort()
             .stream()
             .map(this::getPropertySort)
-            .collect(Collectors.toList());
+            .toList();
 
         page = pg;
     }
@@ -124,7 +126,10 @@ public final class ImmutableSpringPageResponse<T> implements PaginatedResponse<I
             direction = "desc";
         }
 
-        return new ImmutablePropertySort(order.getProperty(), direction);
+        return ImmutablePropertySort.builder()
+            .property(order.getProperty())
+            .direction(direction)
+            .build();
     }
 
 }
